# modelgraph

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  genindex.html  hodgkin_huxley.html  hodgkin_huxley_gotranx.html  index.html  modelgraph.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: github-pages.yml  main.yml
_modules/: index.html
_modules/modelgraph/: dependency_graph.html
_sources/: hodgkin_huxley.md.txt  hodgkin_huxley_gotranx.md.txt  index.rst.txt  modelgraph.rst.txt  modules.rst.txt
demo/: hodgkin_huxley.py  hodgkin_huxley_gotranx.py  hodgkin_huxley_squid_axon_model_1952_original.ode
docs/source/: conf.py  index.rst
sorter_test/: T1.ode  T2.ode  T3.ode
src/modelgraph/: __init__.py  __main__.py  cli.py  dependency_graph.py  gui.py  sorter.py
tests/: test_dependency_graph.py
