[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "modelgraph"
version = "1.1.0"
description = "Tool for extracting dependency graphs from gotran ODE models"
authors = [{name = "Henrik Finsberg", email = "henriknf@simula.no"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["ODE", "models", "graphs", "dependencies"]
requires-python = ">=3.8"
dependencies = [
    "click",
    "networkx",
    "pydot",
    "importlib-metadata;python_version<'3.8'",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ComputationalPhysiology/modelgraph"

[project.optional-dependencies]
dev = [
    "Sphinx",
    "black",
    "build",
    "bump2version",
    "flake8",
    "ipython",
    "isort",
    "mypy",
    "pdbpp",
    "pip",
    "pre-commit",
    "sphinx",
    "twine",
    "wheel",
]
docs = [
    "Sphinx",
    "jupytext",
    "myst-parser",
    "gotran",
    "gotranx",
    "pydata-sphinx-theme",
]
gui = ["streamlit"]
plot = [
    "matplotlib",
    "pydot",
]
test = [
    "gotran",
    "gotranx",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.flake8]
exclude = "docs"
ignore = "E203, E266, E501, W503, E731"
max-line-length = "88"
max-complexity = "18"
select = "B,C,E,F,W,T4"

[tool.aliases]
test = "pytest"

[tool.pytest.ini_options]
addopts = "--cov=src/modelgraph --cov-report html --cov-report xml --cov-report term-missing -v"
testpaths = ["tests"]

[tool.mypy]
files = ["src/modelgraph", "tests"]
ignore_missing_imports = true
exclude = "docs"

[tool.coverage.run]
omit = [
    "src/modelgraph/gui.py",
    "src/modelgraph/cli.py",
    "src/modelgraph/__main__.py",
]


[tool.ruff]

# Exclude a variety of commonly ignored directories.
exclude = [
    "examples",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "submit.py"
]

# Same as Black.
line-length = 110

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E743", "E731"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.bumpversion]
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
current_version = "1.1.0"


[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
