[metadata]
name = modelgraph
version = 0.1.0
description = Tool for extracting dependency graphs from gotran ODE models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/modelgraph
author = Henrik Finsberg
author_email = henriknf@simula.no
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = ODE, models, graphs, dependencies

[options]
packages = find:
install_requires =
    click
    gotran
    networkx
python_requires = >=3.7
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
dev =
    Sphinx
    black
    build
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    sphinx
    twine
    wheel
docs =
    Sphinx
    myst-parser
    sphinx-press-theme
gui =
    streamlit
plot =
    matplotlib
    pydot
test =
    pytest
    pytest-cov

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=src/modelgraph --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[mypy]
files = src/modelgraph,tests
ignore_missing_imports = true
exclude = docs

[coverage:run]
omit =
    src/modelgraph/gui.py
    src/modelgraph/cli.py
    src/modelgraph/__main__.py
